--- a/springBootMongo.yml
+++ b/springBootMongo.yml
@@ -1,48 +1,3 @@
-kind: ConfigMap
-apiVersion: v1
-metadata:
-  name: springappconfigmap
-data:
-  username: springapp
-  password: mongodb@123
-
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: springappsecrets
-type: Opaque
-stringData:   # We can define multiple key value pairs.
-  password: devdb@123
-
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: pv-hostpath
-spec:
-  storageClassName: manual
-  capacity:
-    storage: 1Gi
-  accessModes:
-  - ReadWriteOnce
-  hostPath:
-    path: "/tmp/mongodata"
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: pvc-hostpath
-spec:
-  storageClassName: manual
-  accessModes:
-  - ReadWriteOnce
-  resources:
-    requests:
-      storage: 100Mi
-
----
-## Spring Boot App
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -60,36 +15,29 @@ spec:
     spec:
       containers:
       - name: springappcontainer
-        image: hpdevops3/spring-mongo
+        image: hpdevops3/spring-boot-mongo:4
         ports:
         - containerPort: 8080
         env:
-        - name: MONGO_DB_USERNAME
-          valueFrom:
-            configMapKeyRef:
-              name: springappconfigmap
-              key: username
-        - name: MONGO_DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: springappsecrets
-              key: password
         - name: MONGO_DB_HOSTNAME
-          value: mongo
+          value: mongosvc
+        - name: MONGO_DB_USERNAME
+          value: devdb
+        - name: MONGO_DB_PASSWORD
+          value: devdb@123
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: springapp
+  name: springappsvc
 spec:
+  type: NodePort
   selector:
     app: springapp
   ports:
   - port: 80
     targetPort: 8080
-  type: NodePort
 ---
-# Mongo db pod with volumes(HostPath)
 apiVersion: apps/v1
 kind: ReplicaSet
 metadata:
@@ -97,45 +45,51 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: mongodb
+      app: mongo
   template:
-     metadata:
-       name: mongodbpod
-       labels:
-         app: mongodb
-     spec:
-       volumes:
-       - name: mongodb-pvc
-         persistentVolumeClaim:
-           claimName: pvc-hostpath
-       containers:
-       - name: mongodbcontainer
-         image: mongo
-         ports:
-         - containerPort: 27017
-         env:
-         - name: MONGO_INITDB_ROOT_USERNAME
-           valueFrom:
-             configMapKeyRef:
-               name: springappconfigmap
-               key: username
-         - name: MONGO_INITDB_ROOT_PASSWORD
-           valueFrom:
-             secretKeyRef:
-               name: springappsecrets
-               key: password
-         volumeMounts:
-         - name: mongodb-pvc
-           mountPath: /data/db
+    metadata:
+      name: springapppod
+      labels:
+        app: mongo
+    spec:
+      containers:
+      - name: mongocontainer
+        image: mongo
+        ports:
+        - containerPort: 27107
+        env:
+        - name: MONGO_INITDB_ROOT_USERNAME
+          value: devdb
+        - name: MONGO_INITDB_ROOT_PASSWORD
+          value: devdb@123
+        volumeMounts:
+        - name: mongodbvol
+          mountPath: /data/db
+      volumes:
+      - name: mongodbvol
+        persistentVolumeClaim:
+          claimName: monogodbpvc
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: monogodbpvc
+spec:
+  storageClassName: manual
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongo
+  name: mongosvc
 spec:
   type: ClusterIP
   selector:
-    app: mongodb
+    app: mongo
   ports:
   - port: 27017
     targetPort: 27017
