--- a/springBootMongo.yml
+++ b/springBootMongo.yml
@@ -93,3 +93,17 @@ spec:
   ports:
   - port: 27017
     targetPort: 27017
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: hostpathpv
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 2Gi
+  accessModes:
+  - ReadWriteOnce
+  hostPath:
+    path: /tmp/mongodb
+
